Wed Apr 14 17:53:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (appendline): should terminate.
	  http://golf.shinh.org/p.rb?DECimal+number+to+BINary#Ruby

	* string.c (rb_string_value_cstr): make NUL terminated if it is
	  not done.

Mon Apr 12 21:47:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* LEGAL: separated the section for parse.c.  contributed by Paul
	  Betteridge in [ruby-core:29472].

Mon Apr 12 12:37:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/depend: add -I. for cross compiling.

Sun Apr 11 16:48:13 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (DllMain, ruby_init_loadpath): use DLL instance handle given
	  to DllMain instead of VirtualQuery so that loadpath becomes relative
	  from the DLL on WinCE too.

	* ruby.c (ruby_init_loadpath): do not mangle relative path.

	* ruby.c (ruby_init_loadpath): fix for the length of mangled path.
	  [ruby-core:29398]

Thu Apr  8 14:32:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* configure.in: --disable-install-doc should prohibit doxygen.

Wed Apr  7 09:44:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (Makefile): qoute init-commands.

Tue Mar 30 18:11:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_initial_load_paths): moved initial load path
	  from ruby.c.

Tue Mar 30 18:04:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (config.status): ommit cached results.

	* configure.in (RUBY_EXEC_PREFIX, RUBY_LIB_PREFIX): fixed.

	* common.mk (revision.h): add RUBY_BRANCH_NAME.

	* configure.in (MINIOBJS): use dmydln.o on all platforms.

	* common.mk (COMMONOBJS): moved dln.o to OBJS not to conflict with
	  dmydln.o.

Tue Mar 30 02:40:31 2010  Akinori MUSHA  <knu@iDaemons.org>

	* prelude.rb (Process.daemon): New method.

	* .document: Add prelude.rb.

Mon Mar 29 17:38:24 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* ext/rational/lib/rational.rb: fix [Bug #1397].
